First 4 Questions - Time Complexity

--- a/_03-py-recursive-algorithms-practice.ipynb
+++ b/_03-py-recursive-algorithms-practice.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +65,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n:  15\n",
+      "n:  14\n",
+      "n:  13\n",
+      "n:  12\n",
+      "n:  11\n",
+      "n:  10\n",
+      "n:  9\n",
+      "n:  8\n",
+      "n:  7\n",
+      "n:  6\n",
+      "n:  5\n",
+      "n:  4\n",
+      "n:  3\n",
+      "n:  2\n",
+      "n:  1\n",
+      "n:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'sandwich'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "titled(15)"
    ]
@@ -78,7 +111,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "**Answer:**\n",
+    "**Answer:** O(n) because it keeps calling itself until n is less than 0 so basically it calls itself n+1 times which simplifies to O(n) time complexity.\n",
     "\n"
    ]
   },
@@ -91,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n:  8\n",
+      "n:  6\n",
+      "n:  4\n",
+      "n:  2\n",
+      "n:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'sandwich'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "untitled(8)"
    ]
@@ -118,7 +173,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "**Answer:**\n",
+    "**Answer:** O(n) time complexity as the fuction keeps subracting 2 from n and calling itself until n is less than 0, and this simplifies to O(n) as that number alone determines the time complexity when it changes.\n",
     "\n",
     "\n"
    ]
@@ -132,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +201,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n: 3\n",
+      "n: 2\n",
+      "n: 1\n",
+      "n: 0\n",
+      "n: 0\n",
+      "n: 1\n",
+      "n: 0\n",
+      "n: 0\n",
+      "n: 2\n",
+      "n: 1\n",
+      "n: 0\n",
+      "n: 0\n",
+      "n: 1\n",
+      "n: 0\n",
+      "n: 0\n"
+     ]
+    }
+   ],
    "source": [
     "does_nothing(3)"
    ]
@@ -159,7 +236,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "**Answer:**\n",
+    "**Answer:** O(2^n) time complexity because there are two recursive function calls within does_nothing() each with depth of n.\n",
     "\n"
    ]
   },
@@ -172,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,9 +264,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "does_nothing_more_slowly(3)"
    ]
@@ -200,7 +324,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "**Answer:**"
+    "**Answer:** O(3^n) because similar to the last question, the function recursivley calls itself three times, each with a depth of n."
    ]
   },
   {
@@ -212,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,9 +349,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "N:  3\n",
+      "Hello!\n",
+      "N:  2\n",
+      "Hello!\n",
+      "N:  1\n",
+      "Hello!\n",
+      "N:  0\n",
+      "Hello!\n",
+      "N:  1\n",
+      "Hello!\n",
+      "N:  0\n",
+      "Hello!\n",
+      "N:  2\n",
+      "Hello!\n",
+      "N:  1\n",
+      "Hello!\n",
+      "N:  0\n",
+      "Hello!\n",
+      "N:  1\n",
+      "Hello!\n",
+      "N:  0\n",
+      "Hello!\n",
+      "N:  2\n",
+      "Hello!\n",
+      "N:  1\n",
+      "Hello!\n",
+      "N:  0\n",
+      "Hello!\n",
+      "N:  1\n",
+      "Hello!\n",
+      "N:  0\n"
+     ]
+    }
+   ],
    "source": [
     "looprec(3)"
    ]
@@ -238,7 +401,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "**Answer:**"
+    "**Answer:** O(n!) because the loop itself happens n times, and each time it recursivley calls itself with n-1 which when we multiply after occuring again and again, leads to n factorial "
    ]
   },
   {
@@ -467,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
