Space complexity question complete

--- a/_03-py-recursive-algorithms-practice.ipynb
+++ b/_03-py-recursive-algorithms-practice.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,9 +427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hello(4)"
    ]
@@ -438,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** O(n) is the space complexity because the initial and all recursive calls will keep going until n is equal to zero, and so the depth of the recursion is n."
    ]
   },
   {
